# rustclitest

./: Cargo.toml
src/: main.rs
